--- a/FirstApplication/app/src/main/res/values/strings.xml
+++ b/FirstApplication/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="edit_message">Enter your message here</string>
     <string name="button_send">Send</string>
     <string name="title_activity_display_message">My Message</string>
+    <string name="action_email">Email</string>
+    <string name="action_map">Map</string>
+    <string name="action_new">New Item</string>
 </resources>
